fix alignment on hamburger icon on mobile screens

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -67,8 +67,10 @@ body {
     .header-content {
       margin-top: 25vh;
     }
+    .double-nav .button-collapse {
+        margin-left: 0px;
+    }
   }
-
 
 
 
